<resources>
    <string name="app_name">EffectiveMobile</string>
    <string name="select_category">Select Category</string>
    <string name="hot_sales">Hot sales</string>
    <string name="best_seller">Best Seller</string>
    <string name="view_all">view all</string>
    <string name="see_more">see more</string>
    <string name="search">Search</string>
    <string name="title_new">New</string>
    <string name="buy_now">Buy now!</string>
    <string name="filter_options">Filter options</string>
    <string name="product_details">Product Details</string>
    <string name="add_address">Add address</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="dollars">$%1$s</string>
    <string name="dollars_with_point">$%1$s.00</string>
    <string name="dollars_us">$%1$s us</string>
    <string name="memory_gb">%1$s GB</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="color_and_capacity">Select color and capacity</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="my_cart">My cart</string>
    <string name="delivery">Delivery</string>
    <string name="free">Free</string>
    <string name="total">Total</string>
</resources>