<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/first_screen_background"
    android:paddingTop="10dp"
    tools:context=".ui.activities.MainActivity">

    <ImageView
        android:id="@+id/imageGeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_geo"
        app:layout_constraintBottom_toBottomOf="@id/tvGeo"
        app:layout_constraintEnd_toStartOf="@id/tvGeo"
        app:layout_constraintTop_toTopOf="@id/tvGeo" />

    <TextView
        android:id="@+id/tvGeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mark_pro"
        android:text="Zihuatanejo, Gro"
        android:textColor="@color/titles_text_color"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageArrowDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@id/tvGeo"
        app:layout_constraintStart_toEndOf="@id/tvGeo"
        app:layout_constraintTop_toTopOf="@id/tvGeo" />

    <ImageView
        android:id="@+id/imageFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:padding="15dp"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@id/tvGeo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvGeo" />

    <TextView
        android:id="@+id/tvSelectCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/mark_pro"
        android:text="@string/select_category"
        android:textColor="@color/titles_text_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageGeo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mark_pro"
        android:text="@string/view_all"
        android:textColor="@color/view_all_color"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/tvSelectCategory"
        app:layout_constraintEnd_toEndOf="@id/imageFilter"
        app:layout_constraintTop_toTopOf="@id/tvSelectCategory" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectCategory" />

    <SearchView
        android:id="@+id/search"
        android:layout_width="290dp"
        android:layout_height="35dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/background_search"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search"
        android:searchIcon="@drawable/ic_search"
        app:layout_constraintStart_toStartOf="@id/tvSelectCategory"
        app:layout_constraintTop_toBottomOf="@id/rvCategories"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/coordinator"/>

    <ImageView
        android:id="@+id/imageQRCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_qr_circle"
        app:layout_constraintBottom_toBottomOf="@id/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/search" />

    <ImageView
        android:id="@+id/imageQRCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_qr_center"
        app:layout_constraintBottom_toBottomOf="@id/imageQRCircle"
        app:layout_constraintEnd_toEndOf="@id/imageQRCircle"
        app:layout_constraintStart_toStartOf="@id/imageQRCircle"
        app:layout_constraintTop_toTopOf="@id/imageQRCircle" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        tools:visibility="visible">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@id/coordinator"
            app:layout_constraintTop_toBottomOf="@id/search">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvHotSales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/mark_pro"
                    android:text="@string/hot_sales"
                    android:textColor="@color/titles_text_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mark_pro"
                    android:text="@string/see_more"
                    android:textColor="@color/view_all_color"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvHotSales"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvHotSales" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHotSales"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toBottomOf="@id/tvHotSales" />

                <TextView
                    android:id="@+id/tvBestSeller"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/mark_pro"
                    android:text="@string/best_seller"
                    android:textColor="@color/titles_text_color"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvHotSales" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mark_pro"
                    android:text="@string/see_more"
                    android:textColor="@color/view_all_color"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvBestSeller"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvBestSeller" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvBestSeller"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@id/tvBestSeller" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/optionsFilterContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:behavior_peekHeight="0dp"
            app:cardCornerRadius="20dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <TextView
                    android:id="@+id/tvFilterOptions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/mark_pro"
                    android:text="@string/filter_options"
                    android:textColor="@color/titles_text_color"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/ic_rectangle_dark_blue"
                    app:layout_constraintBottom_toBottomOf="@id/tvFilterOptions"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvFilterOptions" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_cancel"
                    app:layout_constraintBottom_toBottomOf="@id/imageCancel"
                    app:layout_constraintEnd_toEndOf="@id/imageCancel"
                    app:layout_constraintStart_toStartOf="@id/imageCancel"
                    app:layout_constraintTop_toTopOf="@id/imageCancel" />

                <Button
                    android:id="@+id/btnDone"
                    android:layout_width="80dp"
                    android:layout_height="37dp"
                    android:layout_marginEnd="13dp"
                    android:background="@color/view_all_color"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/tvFilterOptions"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/tvFilterOptions" />

                <TextView
                    android:id="@+id/tvBrand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/mark_pro"
                    android:text="@string/brand"
                    android:textColor="@color/titles_text_color"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/imageCancel"
                    app:layout_constraintTop_toBottomOf="@id/imageCancel" />

                <Spinner
                    android:id="@+id/spinBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="#B3B3B3"
                    app:layout_constraintStart_toStartOf="@id/tvBrand"
                    app:layout_constraintTop_toBottomOf="@id/tvBrand" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mark_pro"
                    android:text="@string/price"
                    android:textColor="@color/titles_text_color"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/imageCancel"
                    app:layout_constraintTop_toBottomOf="@id/spinBrand" />

                <Spinner
                    android:id="@+id/spinPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="#B3B3B3"
                    app:layout_constraintTop_toBottomOf="@id/tvPrice" />

                <TextView
                    android:id="@+id/tvSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mark_pro"
                    android:text="@string/size"
                    android:textColor="@color/titles_text_color"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@id/imageCancel"
                    app:layout_constraintTop_toBottomOf="@id/spinPrice" />

                <Spinner
                    android:id="@+id/spinSize"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="#B3B3B3"
                    app:layout_constraintTop_toBottomOf="@id/tvSize" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>